--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 2em;
+}
+
+h1 {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 150%;
+}
+
+body, input[type="text"], button {
+    color: #333;
+    font-family: Cambria, Georgia, serif;
+  }
